# cis-194-summer-2022

./: README.md  cis194.cabal  stack.yaml
src/Homework/Week01/: Assignment.hs
src/Homework/Week02/: Assignment.hs
src/Homework/Week03/: Assignment.hs
src/Homework/Week04/: Assignment.hs
src/Homework/Week05/: Assignment.hs
src/Homework/Week06/: Assignment.hs
src/Homework/Week07/: Scrabble.hs  Sized.hs  StringBuffer.hs
src/Homework/Week08/: Assignment.hs
src/Homework/Week09/: Assignment.hs
src/Homework/Week10/: Assignment.hs  Support.hs
src/Homework/Week12/: Assignment.hs  Employee.hs
test/Homework/: Week04Spec.hs  Week05Spec.hs  Week10Spec.hs  Week12Spec.hs
