cabal-version: 1.12

name:           cis194
version:        0.1.0.0
maintainer:     l@s3r.me
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/laser/cis-194-spring-2022

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Homework.Week01.Assignment
                     , Homework.Week02.Assignment
                     , Homework.Week02.Log
                     , Homework.Week03.Assignment
                     , Homework.Week04.Assignment
                     , Homework.Week04.BST
                     , Homework.Week05.Assignment
                     , Homework.Week05.ExprT
                     , Homework.Week05.Parser
                     , Homework.Week06.Assignment
                     , Homework.Week07.Buffer
                     , Homework.Week07.Editor
                     , Homework.Week07.JoinList
                     , Homework.Week07.Scrabble
                     , Homework.Week07.StringBuffer
                     , Homework.Week07.Sized
                     , Homework.Week08.AParser
                     , Homework.Week08.Assignment
                     , Homework.Week09.AParser
                     , Homework.Week09.Assignment
                     , Homework.Week10.Assignment
                     , Homework.Week10.Support
                     , Homework.Week11.Assignment
                     , Homework.Week12.Employee
                     , Homework.Week12.Assignment
  build-depends:       base >= 4.7 && < 5
                     , MonadRandom
                     , QuickCheck
                     , aeson
                     , bytestring
                     , random
                     , text
                     , sqlite-simple
                     , transformers
                     , mtl
                     , containers

test-suite cis194-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cis194
                     , MonadRandom
                     , QuickCheck
                     , aeson
                     , bytestring
                     , hspec
                     , text
                     , time
                     , unordered-containers
                     , hspec
                     , hspec-contrib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Homework.Week01Spec
                     , Homework.Week02Spec
                     , Homework.Week03Spec
                     , Homework.Week04Spec
                     , Homework.Week05Spec
                     , Homework.Week06Spec
                     , Homework.Week07Spec
                     , Homework.Week08Spec
                     , Homework.Week09Spec
                     , Homework.Week11Spec
                     , Homework.Week12Spec
